--- a/gb/18/5/17/n10404304.md
+++ b/gb/18/5/17/n10404304.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xqqvxg3980/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xqqvxg3980/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xqqvxg3980/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xqqvxg3980/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xqqvxg3980/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>政府2018年预算 与选前承诺差多远？</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年05月18日讯】（大纪元记者李扪心综合报导）本周四，<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>2018/2019年<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>正式出台。在发布之前，这个预算案就引起了各方的广泛关注，因为它不但是工党-优先党联盟政府的第一个预算案，更被很多人视为是对联盟政府是否会真正兑现大<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E9%80%89%E5%89%8D%E6%89%BF%E8%AF%BA.md#1">选前承诺</a>的检验。尤其在健康、教育和住房等直接关系到民众生活的预算。</p>
-<p>在总理嘉欣达·阿丹（Jacinda Ardern）和财政部长格兰特·罗伯森（Grant Robertson）宣布新<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>的第一个<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>之前，阿丹就表示，新预算案将重在重建健康和教育系统等公共服务领域的坚实基础，帮助那些处于贫困的民众、贫穷的工作一族，以及那些感到手头有些紧张的中等收入阶层。</p>
-<figure id="attachment_10404311" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959337944-e1526591375949.jpg"><img class="wp-image-10404311 size-full" src="https://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959337944-e1526591375949.jpg" alt="" width="450" b="675" /></a><figcaption class="wp-caption-text">5 月17 日，总理嘉欣达? 阿丹（Jacinda Ardern）和财政部长格兰特? 罗伯森（Grant<br /> Robertson）发布新政府的第一个预算案。（Hagen Hopkins/Getty Images）</figcaption></figure>
+<p>【大纪元2018年05月18日讯】（大纪元记者李扪心综合报导）本周四，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>2018/2019年<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>正式出台。在发布之前，这个预算案就引起了各方的广泛关注，因为它不但是工党-优先党联盟政府的第一个预算案，更被很多人视为是对联盟政府是否会真正兑现大<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%89%E5%89%8D%E6%89%BF%E8%AF%BA.md#1">选前承诺</a>的检验。尤其在健康、教育和住房等直接关系到民众生活的预算。</p>
+<p>在总理嘉欣达·阿丹（Jacinda Ardern）和财政部长格兰特·罗伯森（Grant Robertson）宣布新<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%94%BF%E5%BA%9C.md#1">政府</a>的第一个<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A2%84%E7%AE%97%E6%A1%88.md#1">预算案</a>之前，阿丹就表示，新预算案将重在重建健康和教育系统等公共服务领域的坚实基础，帮助那些处于贫困的民众、贫穷的工作一族，以及那些感到手头有些紧张的中等收入阶层。</p>
+<figure id="attachment_10404311" aria-describedby="caption-attachment-10404311" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959337944-e1526591375949.jpg"><img class="wp-image-10404311 size-full" src="https://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959337944-e1526591375949.jpg" alt="" width="450" b="675" /></a><figcaption id="caption-attachment-10404311" class="wp-caption-text">5 月17 日，总理嘉欣达? 阿丹（Jacinda Ardern）和财政部长格兰特? 罗伯森（Grant<br /> Robertson）发布新政府的第一个预算案。（Hagen Hopkins/Getty Images）</figcaption></figure>
 <p>不过反对党国家党表示，工党联盟政府缺乏管理国家的经验，所以在大选前随便承诺一些不可行的事情，联盟政府的第一个预算案无疑会打破很多其在大选前的承诺。</p>
 <p>对于工党过度承诺的批评，财政部长罗伯森否认这一点。他说，“能够不断更新大选前的承诺这固然好，但是当我们进入政府，看到我们医院和学校的现实状况时，我们不得不重新考虑具体实施的优先事项和顺序。”</p>
 <h2><strong>健康部长：多年投资不足</strong></h2>
-<p><em>工党在大<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E9%80%89%E5%89%8D%E6%89%BF%E8%AF%BA.md#1">选前承诺</a>，在未来四年里，将在医疗健康系统投入</em><em>80</em><em>亿元资金，以解决精神健康服务中，初级保健、紧张的人员配备，以及资源不足的基础设施等方面的漏洞。</em></p>
-<p>卫生部长大卫·克拉克（David Clark）说，这些都是上届政府忽视了的压力点，<ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的医疗健康系统长期以来一直都面临投资不足的问题。</p>
+<p><em>工党在大<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%89%E5%89%8D%E6%89%BF%E8%AF%BA.md#1">选前承诺</a>，在未来四年里，将在医疗健康系统投入</em><em>80</em><em>亿元资金，以解决精神健康服务中，初级保健、紧张的人员配备，以及资源不足的基础设施等方面的漏洞。</em></p>
+<p>卫生部长大卫·克拉克（David Clark）说，这些都是上届政府忽视了的压力点，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>的医疗健康系统长期以来一直都面临投资不足的问题。</p>
 <p><strong>基础设施建设和维护</strong> 前两个月，奥克兰南区的Middlemore医院，有多栋建筑年久失修，开始发霉，其中一些霉菌被证实有毒，此事把医疗系统的基础设施建设和维护，摆上了政府的重要议事日程。</p>
 <p>政府预测，在未来10年里，仅在基础设施的建设和维护上，健康系统就需要140亿元资金。有专家说，实际花费可能会更高。</p>
 <p><strong>紧张的人员配备</strong> 薪水医疗专家协会政策和研究主任林登基恩（Lyndon Keene）说，“超过50％的私人专家都报告了工作疲倦问题，护士们承受着相当大的压力，因为医院没有配备足够的人员，所以很多人超时工作护理病人，错过休息时间。”</p>
-<p><ahref="https://github.com/xqqvxg3980/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>护理组织（NZNO）的专业服务副经理希拉蕊·格拉姆-史密斯（Hilary Graham-Smith）表示，健康局没有能力招聘所需的护士和助产士。“因为缺少工作人员，这意味着病人的护理会受到影响。”</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E8%A5%BF%E5%85%B0.md#1">新西兰</a>护理组织（NZNO）的专业服务副经理希拉蕊·格拉姆-史密斯（Hilary Graham-Smith）表示，健康局没有能力招聘所需的护士和助产士。“因为缺少工作人员，这意味着病人的护理会受到影响。”</p>
 <p>最近，全国的护士纷纷罢工游行，要求政府提高工资、改善护士工作环境。</p>
 <p><strong>初级保健 </strong>工党还承诺把家庭医生的培训名额从每年200个增加到300个。</p>
 <p>新西兰医疗协会首席执行官莱斯利·克拉克（Lesley Clarke）说，“这才是解决保健系统长期问题的方法。”</p>
@@ -63,48 +63,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/7/22/n9450375.md#1">如果工党执政 会怎样花钱</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/8/21/n9549658.md#1">移民不是问题？梅大副校长吁宣扬好消息</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/9/12/n9625251.md#1">工党：执政百日内10项首要任务</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/10/20/n9753348.md#1">美国参院通过预算案 股市走高美元上扬</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/11/23/n9886451.md#1">上大学免学费又增津贴 新政你受惠几多</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/12/17/n9965158.md#1">“家庭礼包”计划启动 旨在减少贫困儿童</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/1/17/n10066465.md#1">卑诗绿党吁禁外国人买房  省长否决</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/2/1/n10105392.md#1">绿党施压省府打压房市</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/2/23/n10165709.md#1">去年港楼价 创五年最大升幅</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/31/n12516548.md#1">工党抨击国家党卖公房政策后被爆出售公房</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/22/n9450375.md#1">如果工党执政 会怎样花钱</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/21/n9549658.md#1">移民不是问题？梅大副校长吁宣扬好消息</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/12/n9625251.md#1">工党：执政百日内10项首要任务</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/20/n9753348.md#1">美国参院通过预算案 股市走高美元上扬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/11/23/n9886451.md#1">上大学免学费又增津贴 新政你受惠几多</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/12/17/n9965158.md#1">“家庭礼包”计划启动 旨在减少贫困儿童</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/17/n10066465.md#1">卑诗绿党吁禁外国人买房  省长否决</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/1/n10105392.md#1">绿党施压省府打压房市</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/23/n10165709.md#1">去年港楼价 创五年最大升幅</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613700.md#1">新西兰投资基金在俄投资上亿 总理给出回应</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12512513.md#1">【西岸观察】31%非裔要投票给川普 史无前例</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/31/n12516129.md#1">【珍言真语】金钟谈红二代罗宇 中共体制造悲剧</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12510381.md#1">福克斯主持：邮件被打开 亨特机密文件消失</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509877.md#1">【翻墙必看】中共五中全会一片死寂</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511777.md#1">【役情最前线】涉孙力军案 央视女主播证实出事</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511870.md#1">翻拍《棋灵王》被批毁童年 中共大内宣引众怒</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/28/n12509127.md#1">过世父亲留下百亿家产 黄子韬频晒奢侈品惹议</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509634.md#1">《后翼弃兵》影评：天才女棋手的精彩传奇</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12511714.md#1">40岁安以轩二胎得女 称娃宝长得特别好看</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/29/n12509968.md#1">主人忘记带走 小狗花26天走60多公里回家</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/26/n12501857.md#1">高血脂有3症状！这些食物清胆固醇 让血液变干净</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xqqvxg3980/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xqqvxg3980/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/17/n10404304.htm">政府2018年预算 与选前承诺差多远？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/17/n10404304.htm">政府2018年预算 与选前承诺差多远？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xqqvxg3980/djy/blob/master/gb/18/5/17/n10404304.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xqqvxg3980/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xqqvxg3980/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xqqvxg3980/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xqqvxg3980/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/5/17/n10404304.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
